CSS zweite Section gestylt

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,12 +3,17 @@ body {
 }
 
 main {
-    margin: 0 2rem;
+    margin: 0 3rem;
     color: var(--color-rosa);
 }
 
+hr {
+    border: 1px solid var(--color-rosa);
+}
+
+/* ! Section 1 */
+
 .sec1 {
-    background-color: blue;
     display: flex;
     gap: 30%;
     margin: 2rem 0;
@@ -27,4 +32,64 @@ main {
 
 .sec1 p {
     width: 90%;
+}
+
+/*  ! Section 2 */
+
+.sec2 {
+    position: relative;
+    height: 100vh;
+}
+
+.sec2 img {
+    width: 20rem;
+}
+
+.sec2 div:nth-of-type(1) {
+    width: 15rem;
+    height: max-content;
+    position: absolute;
+    inset: 0;
+    margin: auto 0;
+}
+
+.sec2 div:nth-of-type(2), .sec2 div:nth-of-type(3), .sec2 div:nth-of-type(4), .sec2 div:nth-of-type(5) {
+    position: absolute;
+    right: 0;
+}
+
+.sec2 div:nth-of-type(4) {
+    right: 50rem;
+    top: 7rem;
+}
+
+.sec2 div:nth-of-type(5) {
+    right: 45rem;
+    top: 20rem;
+}
+
+.sec2 div:nth-of-type(3) {
+    right: 37rem;
+    top: 12.5rem;
+    display: flex;
+    gap: 0.5rem;
+}
+
+.sec2 div:nth-of-type(2) {
+    right: 27rem;
+    top: 25rem;
+}
+
+/* Hover on Images in z-direction */
+
+.sec2 div:nth-of-type(4):hover {
+    z-index: 1;
+}
+
+.sec2 div:nth-of-type(3):hover {
+    z-index: 2;
+}
+
+.sec2 div:nth-of-type(2):hover {
+    z-index: 3;
 }
