--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ html {
 
 body {
     padding: 0 var(--padding-global);
+    width: 100vw;
 }
 
 /* * Start Header */
@@ -64,10 +65,99 @@ body {
     font-size: 10rem;
 } */
 
-.sc__starts video {
+.video__hero{
     width: 100%;
 }
 
 /* ! Section Starts completed */
+/* * Section Brand Def start */
 
+.sc__brand-def {
+    margin-bottom: 64px;
+}
+.sc__brand-def p:nth-of-type(1) {
+    font-family: 'Scto_Regular';
+    font-size: 0.8125rem;
+    color: var(--color-black);
+    margin-bottom: 16px;
+}
 
+.sc__brand-def div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 1620px;
+    width: calc(100vw - 2 * var(--padding-global));
+    margin-bottom: 32px;
+}
+.sc__brand-def div p:nth-child(1) {
+    font-family: 'Scto_Bold';
+    font-size: 2rem;
+    color: var(--color-black);
+    width: 50%;
+}
+.sc__brand-def div img {
+    min-width: 200px;
+    max-width: 400px;
+    width: 30vw;
+}
+.sc__brand-def a {
+    font-family: 'Scto_Regular';
+    font-size: 0.625rem;
+    color: var(--color-black);
+    text-decoration: none;
+    padding: 8px 16px;
+    border: 1px solid var(--color-black);
+    border-radius: 8px;
+}
+
+.sc__brand-def hr {
+    margin-top: 64px;
+}
+
+/* ! Section Brend Def completed */
+/* * Section Engagements start */
+
+.sc__engagements {
+    margin-bottom: 64px;
+}
+.sc__engagements h3 {
+    margin-bottom: 64px;
+}
+
+.article__sidecroll {
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: row;
+    gap: 32px
+}
+
+.div__sidescroll {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    display:inline-block;
+    min-width: 280px;
+    width: 20vw;
+    /* min-height: 470px;
+    height: 20vh; */
+}
+
+.div__sidescroll img {
+    height: 40px;
+    margin-bottom: 8px;
+}
+.div__sidescroll p:nth-of-type(1) {
+    margin: 0 0 32px 0
+}
+.div__sidescroll h4 {
+    margin-bottom: 16px;
+}
+.div__sidescroll p:nth-of-type(2) {
+    height: max-content;
+    margin-bottom: 8px;
+}
