--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,11 @@ html {
 }
 
 :root {
-    --padding-global: 32px;
+    --padding-global: 2rem;
 }
 
 body {
-    padding: 0 var(--padding-global);
+    /* padding: 0 var(--padding-global); */
     width: 100vw;
 }
 
@@ -18,7 +18,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 32px;
+    margin-bottom: 2rem;
 }
 .header img {
     height: 18.5px;
@@ -28,7 +28,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap:48px;
+    gap: 3rem;
 }
 .nav__header a {
     font-family: 'Scto_Regular';
@@ -54,7 +54,7 @@ body {
 /* * Start Section Starts */
 
 .sc__starts {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
 }
 .sc__starts h2 {
     text-align: right;
@@ -79,7 +79,7 @@ body {
     font-family: 'Scto_Regular';
     font-size: 0.8125rem;
     color: var(--color-black);
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
 }
 
 .sc__brand-def div {
@@ -90,7 +90,7 @@ body {
     width: 100%;
     max-width: 1620px;
     width: calc(100vw - 2 * var(--padding-global));
-    margin-bottom: 32px;
+    margin-bottom: 2rem;
 }
 .sc__brand-def div p:nth-child(1) {
     font-family: 'Scto_Bold';
@@ -108,23 +108,23 @@ body {
     font-size: 0.625rem;
     color: var(--color-black);
     text-decoration: none;
-    padding: 8px 16px;
+    padding: .5rem 1rem;
     border: 1px solid var(--color-black);
-    border-radius: 8px;
+    border-radius: .5rem;
 }
 
 .sc__brand-def hr {
-    margin-top: 64px;
+    margin-top: 4rem;
 }
 
 /* ! Section Brend Def completed */
 /* * Section Engagements start */
 
 .sc__engagements {
-    margin-bottom: 64px;
+    margin-bottom: 4rem;
 }
 .sc__engagements h3 {
-    margin-bottom: 64px;
+    margin-bottom: 4rem;
 }
 
 .article__sidecroll {
@@ -132,7 +132,7 @@ body {
     overflow-y: hidden;
     display: flex;
     flex-direction: row;
-    gap: 32px
+    gap: 2rem;
 }
 
 .div__sidescroll {
@@ -149,15 +149,90 @@ body {
 
 .div__sidescroll img {
     height: 40px;
-    margin-bottom: 8px;
+    margin-bottom: .5rem;
 }
 .div__sidescroll p:nth-of-type(1) {
-    margin: 0 0 32px 0
+    margin: 0 0 2rem 0
 }
 .div__sidescroll h4 {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
 }
 .div__sidescroll p:nth-of-type(2) {
     height: max-content;
-    margin-bottom: 8px;
+    margin-bottom: .5rem;
+}
+
+/* ! Section Engagements completed */
+/* * Start Section Link About */
+
+.sc__link-about {
+    background-color: var(--color-black);
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 4rem;
+}
+
+.div__link-about, .sc__link-about video {
+    width: calc(100vw/2 - 2 * var(--padding-global));
+    height: 100%;
+}
+
+.div__link-about {
+    color: var(--color-rosa);
+}
+.div__link-about h2 {
+    margin-bottom: 1rem;
+}
+.div__link-about p {
+    margin-bottom: 3rem;
+}
+.div__link-about a {
+    color: var(--color-rosa);
+    padding: .5rem 1rem;
+    text-decoration: none;
+    border: 1px solid var(--color-rosa);
+    border-radius: 2rem;
+}
+
+.sc__news {
+    background-color: var(--color-black);
+    color: var(--color-rosa);
+    padding-bottom: 4rem;
+}
+.article__news {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 1rem;
+    margin-bottom: 1rem;
+
+}
+.article__news-img {
+    width: 100%;
+    margin-top: 1rem;
+}
+
+.div__news {
+    position: relative;
+}
+.img__arrow {
+    position: absolute;
+    top: 1rem;
+    right: 0;
+    height: 3rem;
+    width: 3rem;
+}
+.p__news-date {
+    margin-top: 5rem;
+}
+
+/* ! Section News Version 1 completed */
+/* * Start Footer */
+
+.footer {
+    background-color: var(--color-black);
+    color: var(--color-white);
+}
+
+.sc__footer {
+    display: flex;
 }
