--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,50 +11,13 @@ body {
     width: 100vw;
 }
 
-/* * Start Header */
 
-.header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2rem;
-}
-.header img {
-    height: 18.5px;
-    width: 80px;
-}
-.nav__header {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 3rem;
-}
-.nav__header a {
-    font-family: 'Scto_Regular';
-    font-size: 0.8125rem;
-    color: var(--color-black);
-    text-decoration: none;
-}
-.div__points {
-    display: flex;
-    flex-direction: row;
-    gap:4px
-}
-.div__points div {
-    background-color: var(--color-black);
-    height: 6px;
-    width: 6px;
-    border-radius: 6px;
-}
-
-/* ! Footer erledigt */
 /* * Start Main */
 
 /* * Start Section Starts */
 
 .sc__starts {
-    margin-bottom: 1rem;
+    padding: 0 var(--padding-global) 1rem var(--padding-global);
 }
 .sc__starts h2 {
     text-align: right;
@@ -73,7 +36,7 @@ body {
 /* * Section Brand Def start */
 
 .sc__brand-def {
-    margin-bottom: 64px;
+    margin: 0 var(--padding-global) 4rem var(--padding-global)
 }
 .sc__brand-def p:nth-of-type(1) {
     font-family: 'Scto_Regular';
@@ -121,7 +84,8 @@ body {
 /* * Section Engagements start */
 
 .sc__engagements {
-    margin-bottom: 4rem;
+
+    padding: 0 var(--padding-global) 4rem var(--padding-global);
 }
 .sc__engagements h3 {
     margin-bottom: 4rem;
@@ -169,7 +133,7 @@ body {
     background-color: var(--color-black);
     display: flex;
     justify-content: space-between;
-    padding-bottom: 4rem;
+    padding: 0 var(--padding-global) 4rem var(--padding-global);
 }
 
 .div__link-about, .sc__link-about video {
@@ -194,10 +158,13 @@ body {
     border-radius: 2rem;
 }
 
+/* !Section Link completed */
+/* * Start Section News */
+
 .sc__news {
     background-color: var(--color-black);
     color: var(--color-rosa);
-    padding-bottom: 4rem;
+    padding: 0 var(--padding-global) 4rem var(--padding-global);
 }
 .article__news {
     display: grid;
@@ -227,12 +194,3 @@ body {
 
 /* ! Section News Version 1 completed */
 /* * Start Footer */
-
-.footer {
-    background-color: var(--color-black);
-    color: var(--color-white);
-}
-
-.sc__footer {
-    display: flex;
-}
