add links to a tag in index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,6 +80,11 @@ body {
     border-radius: .5rem;
 }
 
+.sc__brand-def a:hover {
+    color: var(--color-white);
+    background-color: var(--color-black);
+}
+
 .sc__brand-def hr {
     margin-top: 4rem;
 }
@@ -163,6 +168,10 @@ body {
     text-decoration: none;
     border: 1px solid var(--color-rosa);
     border-radius: 2rem;
+}
+.div__link-about a:hover {
+    color:var(--color-black);
+    background-color: var(--color-rosa);
 }
 
 /* !Section Link completed */
