--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -32,7 +32,7 @@ main {
 }
 .head-text-div-flex {
     display: flex;
-    gap: 10rem;
+    gap: 12rem;
 }
 .punkt {
     width: 25px;
@@ -70,7 +70,7 @@ main {
     border-radius: 50%;
 }
 
-
+/* !section 2 */
 /* 
 
 
