--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -101,75 +101,39 @@ main {
     margin-bottom: 1rem;
 }
 
+/* !trennlinie */
+
+.line3 {
+    margin-top: 2rem;
+}
 /* !section 3 */
-
-/* 
-
-
-.sec2-div-row-flex {
+.sec3-2-div-row-flex {
     display: flex;
-    flex-direction: row;
-    gap: 90%;
+    justify-content: space-between;
+    margin-top: 1rem;
 }
 .sec2-2-div-row-flex {
     display: flex;
-    flex-direction: row;
-    gap: 1000%;
+    justify-content: space-between;
 }
+/* !section 3 article */
 
-
-.office-div-flex {
-    display: flex;
-    flex-direction: row;
-    width: calc(100vw/2 - 2 * 30px);
-    height: 100%;
-    gap: 33%;
-    margin: 3rem;
-}
-.office-sec-div {
-    display: flex;
-    flex-direction: row;
-}
-.san {
-    width: 34em;
-    margin-left: 3%;
-}
-.p-div {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 90%;
-    margin-top: 9%;
-    margin-bottom: 4%;
-}
-
-.border-left {
-
-}
-
-.line {
-    height: 1%;
-}
 .sec3-div-row-flex {
+    margin-top: 2rem;
     display: flex;
-    flex-direction: row;
-    gap: 30%;
-
-}
-
-.a-list  a li {
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-.h3-small {
-    text-decoration: none;
-    width: 50rem;
+    justify-content: space-between;
 }
 .borderless {
     border: 0;
 }
+.h3-small {
+    margin-bottom: 0.5rem;
+}
 
 
- */
+.a-list  a li {
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
